--- a/assets/components/ctaLink/ctaLink.scss
+++ b/assets/components/ctaLink/ctaLink.scss
@@ -1,4 +1,5 @@
 .component-cta-link {
+  text-align: left;
   background-color: gu-colour(garnett-neutral-1);
   transition: background-color .3s;
   border: none;
