--- a/assets/pages/digital-subscription-landing/components/findOutMoreCta.scss
+++ b/assets/pages/digital-subscription-landing/components/findOutMoreCta.scss
@@ -7,15 +7,15 @@
   height: 100%;
   overflow: auto;
   background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0,0,0,0.6);
 }
 
-.component-find-out-more-popup__content {
-  background-color: #fefefe;
+.component-find-out-more-popup__form {
+  background-color: gu-colour(garnett-neutral-3);
   margin: 15% auto;
-  padding: 20px;
   border: 1px solid #888;
-  width: 80%;
+  width: 70%;
+  max-width: 640px;
 }
 
 .component-find-out-more-popup__close {
@@ -23,6 +23,16 @@
   float: right;
   font-size: 28px;
   font-weight: bold;
+  border: solid 1px gu-colour(garnett-neutral-3);
+  border-radius: 800px;
+  background-color: #fff;
+  height: 40px;
+  width: 40px;
+  .svg-cross {
+    padding-left: 1px;
+    padding-top: 3px;
+    height: 19px;
+  }
 }
 
 .component-find-out-more-popup__close:hover,
@@ -30,4 +40,31 @@
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+.component-grid-image--pop-up-header {
+  padding: 20px 20px 0px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.component-find-out-more-popup__body {
+  background: white;
+  display: flex;
+}
+
+.component-find-out-more-popup__title {
+  order: 1;
+  font-family: $gu-headline;
+  line-height: 42px;
+  font-size: 38px;
+  font-weight: bold;
+  border-right: solid gu-colour(garnett-neutral-4) 1px;
+  padding: 10px 20px;
+  max-width: 280px;
+}
+.component-find-out-more-popup__options {
+  order: 2;
+  padding: 10px 20px;
 }
