Added a why support video component, and alternated between that and the old why support on subs landing.

--- a/assets/pages/subscriptions-landing/subscriptionsLanding.scss
+++ b/assets/pages/subscriptions-landing/subscriptionsLanding.scss
@@ -21,6 +21,7 @@
 @import '~components/threeSubscriptions/threeSubscriptions';
 @import '~components/subscriptionsByCountryGroup/subscriptionsByCountryGroup';
 @import '~components/whySupport/whySupport';
+@import '~components/whySupportVideo/whySupportVideo';
 
 
 // ----- Page-Specific Styles ----- //
