Add collapsible promotion options to popup

--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -14,7 +14,7 @@
 @import '~components/priceCta/priceCta';
 @import '~components/customerService/customerService';
 @import 'components/independentJournalismSection';
-@import 'components/findOutMoreCta';
+@import 'components/promotion';
 
 // ----- Page-Specific Styles ----- //
 
