--- a/assets/pages/digital-subscription-landing/components/promotionPopUp.scss
+++ b/assets/pages/digital-subscription-landing/components/promotionPopUp.scss
@@ -69,12 +69,15 @@
   text-align: center;
   vertical-align: middle;
   position: absolute;
+  left: 10%;
   top: 10px;
-  left: 130px;
   color:white;
   h1 {
     margin-top: 22px;
     margin-left: 2px;
+  }
+  @include mq($from: tablet) {
+    left: 130px;
   }
 }
 
@@ -105,7 +108,7 @@
   }
   @include mq($from: tablet) {
     border-right: solid gu-colour(garnett-neutral-4) 1px;
-    font-size: 34px;
+    font-size: 32px;
   }
   @include mq($from: desktop) {
     padding: 10px 20px;
@@ -135,12 +138,6 @@
   }
 }
 
-.component-promotion-options__item {
-  p {
-    margin-bottom: 8px;
-  }
-}
-
 .component-promotion-options__item--closed {
   .component-promotion-options__description {
     display: none;
@@ -162,3 +159,8 @@
   display: block;
   margin-left: 44px;
 }
+
+.component-promotion-options__description-p1 {
+  margin-bottom: 8px;
+}
+
