Make the 'call' text bold

--- a/assets/pages/digital-subscription-landing/components/promotionPopUp.scss
+++ b/assets/pages/digital-subscription-landing/components/promotionPopUp.scss
@@ -158,6 +158,9 @@
 .component-promotion-options__description {
   display: block;
   margin-left: 44px;
+  strong {
+    font-weight: bold;
+  }
 }
 
 .component-promotion-options__description-p1 {
