--- a/assets/components/priceCta/priceCta.scss
+++ b/assets/components/priceCta/priceCta.scss
@@ -1,5 +1,4 @@
 .component-price-cta {
-  padding-left: $gu-h-spacing / 2;
   padding-top: $gu-v-spacing;
   padding-bottom: $gu-v-spacing;
   background-color: #000;
@@ -10,6 +9,7 @@
     width: 185px;
     background-color: gu-colour(news-garnett-highlight);
     color: gu-colour(garnett-neutral-1);
+    margin-left: $gu-h-spacing / 2;
 
     &:hover {
       background-color: darken(gu-colour(news-garnett-highlight), 5%);
@@ -27,4 +27,23 @@
   .svg-arrow-right-straight {
     fill: gu-colour(garnett-neutral-1);
   }
+}
+
+.component-price-cta--with-secondary {
+  padding-bottom: 0;
+
+  .component-cta-link {
+    margin-bottom: $gu-v-spacing;
+  }
+}
+
+.component-price-cta__secondary {
+  background-color: gu-colour(garnett-neutral-3);
+  font-size: 14px;
+  font-style: italic;
+  line-height: 24px;
+  padding-bottom: $gu-v-spacing / 2;
+  padding-left: $gu-h-spacing / 2;
+  width: 100%;
+  box-sizing: border-box;
 }
