--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -711,6 +711,7 @@ form {
 
 .form__input:disabled {
   background: gu-colour(garnett-neutral-4);
+  color: gu-colour(media-garnett-main-1);
 }
 
 .form__input:focus {
