--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -720,7 +720,7 @@ form {
 }
 
 .form__input::placeholder,
-.form__placeholder {
+.form__input--placeholder {
   color: gu-colour(garnett-neutral-2);
 }
 
