--- a/assets/pages/new-contributions-landing/components/SetPassword/setPassword.scss
+++ b/assets/pages/new-contributions-landing/components/SetPassword/setPassword.scss
@@ -4,12 +4,12 @@
     background-color: #dcdcdc;
 
   }
-  
+
   .form__field--contribution-password {
     margin-top: $gu-v-spacing;
   }
 
-  .form__submit-button--create-account {
+  .form__submit-button {
     width: 100%;
     position: relative;
   }
@@ -23,26 +23,23 @@
     padding-bottom: 0;
   }
 
-  .component-cta-link--no-thanks {
-    background-color: transparent;
+  .form__submit--no-thanks {
     margin-top: $gu-v-spacing;
-    height: 42px;
+  }
+
+  .form__submit-button--no-thanks {
+    background: transparent;
+    margin-bottom: $gu-v-spacing * 2;
     color: gu-colour(garnett-neutral-1);
     border: 1px solid gu-colour(neutral-1);
-    display: inline-block;
-    position: relative;
-    .svg-arrow-right-straight {
-      fill: gu-colour(garnett-neutral-1);
-      position: absolute;
-      right: $gu-v-spacing;
-      width: 20px;
-      height: 18px;
-      vertical-align: middle;
+
+    &:enabled {
+      &:hover,
+      &:focus {
+        background: #f6f6f6;
+      }
     }
 
-    .component-cta-link__text {
-      font-size: 16px;
-    }
   }
 
 }
