tablet -> wide breakpoints

--- a/assets/stylesheets/gu-sass/colours.scss
+++ b/assets/stylesheets/gu-sass/colours.scss
@@ -128,6 +128,7 @@ $gu-colours: (
   live-garnett-culture2: #e7d4b9,
   live-garnett-lifestyle1: #7d0068,
   live-garnett-lifestyle2: #ffbac8,
+  campaign-blue: #90DCFF,
 
   media-garnett-main-1: #333333,
 
