use justify-content

--- a/assets/pages/new-contributions-landing/components/SetPassword/setPassword.scss
+++ b/assets/pages/new-contributions-landing/components/SetPassword/setPassword.scss
@@ -2,29 +2,19 @@
   .form__input--email {
     pointer-events:none;
     background-color: #dcdcdc;
-
   }
 
-  .form__field--contribution-password {
+  .form__field--contribution-password, .form__submit--no-thanks{
     margin-top: $gu-v-spacing;
-  }
-
-  .form__submit-button {
-    width: 100%;
-    position: relative;
-  }
-
-  .svg-arrow-right-straight {
-    position: absolute;
-    right: $gu-v-spacing;
   }
 
   .form__submit {
     padding-bottom: 0;
   }
 
-  .form__submit--no-thanks {
-    margin-top: $gu-v-spacing;
+  .form__submit-button {
+    width: 100%;
+    justify-content: space-between;
   }
 
   .form__submit-button--no-thanks {
