--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -6,6 +6,8 @@
 @import '~components/directDebit/directDebitPopUpForm/directDebitPopUpForm';
 @import '~components/directDebit/directDebitForm/directDebitForm';
 @import '~components/errorMessage/errorMessage';
+@import '~components/ctaLink/ctaLink';
+@import 'components/SetPassword/setPassword';
 
 body {
   min-height: 100vh;
@@ -914,7 +916,7 @@ form {
   fill: gu-colour(garnett-neutral-5);
 }
 
-.svg-subscribe {
+.svg-subscribe, .svg-lock {
   width: 23px;
   height: 20px;
   fill: currentColor;
