--- a/assets/pages/contributions-landing/contributionsLanding.scss
+++ b/assets/pages/contributions-landing/contributionsLanding.scss
@@ -26,6 +26,7 @@
 @import '~components/legal/contribLegal/contribLegal';
 @import '~components/payPalContributionButton/payPalContributionButton';
 @import '~components/switchable/errorComponents/paymentError';
+@import 'components/paymentButtons/payPalExpressButton/payPalExpressButton.scss';
 
 // ----- Page Specific Styles ----- //
 
@@ -42,6 +43,7 @@
     margin-top: $gu-v-spacing;
   }
 
+
 }
 
 #contributions-landing-page-us {
@@ -54,3 +56,4 @@
     }
   }
 }
+
