displays payment failure message

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -7,6 +7,7 @@
 @import '~components/directDebit/directDebitForm/directDebitForm';
 @import '~components/errorMessage/errorMessage';
 @import '~components/ctaLink/ctaLink';
+@import '~components/paymentFailureMessage/paymentFailureMessage';
 @import 'components/SetPassword/setPassword';
 
 body {
