--- a/assets/components/paymentFailureMessage/paymentFailureMessage.scss
+++ b/assets/components/paymentFailureMessage/paymentFailureMessage.scss
@@ -10,6 +10,10 @@
 
 }
 
+.gu-content__content .component-payment-failure-message {
+  width: auto;
+}
+
 .svg-exclamation-alternate {
   display: inline-block;
   margin-right: 8px;
