tried moving paypal button into contributionsLanding.jsx

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -946,9 +946,7 @@ form {
 .component-paypal-button-checkout {
   margin-top: 20px;
 
-  @include mq($from: mobileMedium) {
-    width: 304px;
-  }
+  width: 100%;
 }
 
 .component-paypal-button-checkout--hidden {
