--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,6 +7,8 @@
 	mainJsBundle: String,
 	mainStyleBundle: String,
 	description: Option[String] = None,
+	canonicalLink: Option[String] = None,
+	hrefLangLinks: Map[String, String] = Map(),
 	styles: Html = Html(""),
 	scripts: Html = Html("")
 )(implicit assets: AssetsResolver, request: RequestHeader, settings: Settings)
@@ -18,9 +20,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="google-site-verification" content="nFrhJ3suC2OpKRasEkZyH1KZKpSZc-ofno_uunJgfvg" />
 
-	@if(description.isDefined) {
-		<meta name="description" content="@description" />
-		<meta property="og:description" content="@description" />
+	@description.map { definedDescription =>
+		<meta name="description" content="haha@definedDescription" />
+		<meta property="og:description" content="@definedDescription" />
+	}
+
+	@canonicalLink.map { definedCanonicalLink =>
+		<link rel="canonical" href="@definedCanonicalLink" />
+	}
+
+	@for((lang, link) <- hrefLangLinks){
+		<link rel="alternate" href="@link" hreflang="@lang" />
 	}
 
 	@settingsScript(settings)
