--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -21,7 +21,7 @@
 	<meta name="google-site-verification" content="nFrhJ3suC2OpKRasEkZyH1KZKpSZc-ofno_uunJgfvg" />
 
 	@description.map { definedDescription =>
-		<meta name="description" content="haha@definedDescription" />
+		<meta name="description" content="@definedDescription" />
 		<meta property="og:description" content="@definedDescription" />
 	}
 
