--- a/assets/components/introduction/investIntroduction.scss
+++ b/assets/components/introduction/investIntroduction.scss
@@ -72,6 +72,7 @@
   position: relative;
   height: 300px;
   margin: 0 auto;
+  overflow: hidden;
   @include mq($from: mobileLandscape) {
     height: 340px;
     width: gu-breakpoint(mobileLandscape);
