--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -944,7 +944,7 @@ form {
 /* PayPal Express Button */
 
 .component-paypal-button-checkout {
-  margin-top: 20px;
+  margin-top: -$gu-v-spacing;
 
   width: 100%;
 }
