update error message (#1041)
* add error message for missing all valid payment methods

* add type & update typo

* padding

--- a/assets/components/paymentFailureMessage/paymentFailureMessage.scss
+++ b/assets/components/paymentFailureMessage/paymentFailureMessage.scss
@@ -10,8 +10,15 @@
 
 }
 
-.gu-content__content .component-payment-failure-message {
-  width: auto;
+.gu-content__content {
+  .component-payment-failure-message {
+    width: auto;
+    background-color: transparent;
+  }
+
+  .component-payment-failure-message--no-valid-payments {
+    padding: 0;
+  }
 }
 
 .svg-exclamation-alternate {
