--- a/assets/components/leftMarginSection/leftMarginSection.scss
+++ b/assets/components/leftMarginSection/leftMarginSection.scss
@@ -1,6 +1,13 @@
 .component-left-margin-section {
   display: flex;
 
+  &.component-left-margin-section--blue {
+    color: #ffffff;
+    .component-left-margin-section__content {
+      background: gu-colour(sport-garnett-feature);
+    }
+  }
+
   @include mq($from: tablet) {
     &:before {
       content: "";
