--- a/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
+++ b/assets/pages/digital-subscription-landing/digitalSubscriptionLanding.scss
@@ -13,6 +13,7 @@
 @import '~components/leftMarginSection/leftMarginSection';
 @import '~components/priceCta/priceCta';
 @import '~components/customerService/customerService';
+@import '~components/adFreeSection/adFreeSection';
 @import 'components/independentJournalismSection';
 @import 'components/promotionPopUp';
 
