move new chip closer

--- a/assets/components/adFreeSection/adFreeSection.scss
+++ b/assets/components/adFreeSection/adFreeSection.scss
@@ -64,8 +64,8 @@
   font-weight: bold;
   font-family: $gu-headline;
   display: inline-block;
-  padding: 2px 8px;
-  top: -40px;
+  padding: 0 10px 1px;
+  top: -24px;
   left: -80px;
   position: absolute;
   transform: rotate(-4deg);
