--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -86,7 +86,7 @@
 
 	<div id="@mainId"></div>
 
-	<script src="https://polyfill.guim.co.uk/v2/polyfill.min.js?features=default,Array.prototype.find,fetch,Array.prototype.includes,Number.isInteger,Object.values,Object.entries"></script>
+	<script src="https://polyfill.io/v2/polyfill.min.js?features=default,Array.prototype.find,fetch,Array.prototype.includes,Number.isInteger,Object.values,Object.entries"></script>
 	<script defer id="stripe-js" src="https://js.stripe.com/v3/"></script>
 	<script type="text/javascript">
     window.guardian = window.guardian || {};
