--- a/assets/components/subscriptionsThankYou/subscriptionsThankYou.scss
+++ b/assets/components/subscriptionsThankYou/subscriptionsThankYou.scss
@@ -35,22 +35,27 @@
   .component-left-margin-section--return {
     .component-left-margin-section__content {
       box-sizing: border-box;
-      background-color: gu-colour(media-garnett-main-1);
-      padding: ($gu-v-spacing * 2) ($gu-h-spacing / 2);
+
+      @include multiline-top-border;
+
+      @include mq($from: tablet) {
+        border-left: 1px solid gu-colour(garnett-neutral-4);
+      }
     }
 
     .component-cta-link {
       background-color: gu-colour(garnett-neutral-1);
       color: #fff;
-      font-weight: bold;
+      font-weight: bold;      
       box-sizing: border-box;
+      margin: $gu-v-spacing ($gu-h-spacing / 2);
 
       &:hover {
         background-color: darken(gu-colour(garnett-neutral-1), 5%);
       }
 
       @include mq($from: mobileLandscape) {
-        width: 300px;
+        width: 355px;
       }
     }
 
