use colour alias

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -903,7 +903,7 @@ form {
 }
 
 .button--newsletter {
-  color: #ffffff;
+  color: gu-colour(garnett-neutral-5);
   background-color: #22834D;
 
   &:enabled {
