corrects blurb font and size

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -190,7 +190,7 @@ button {
 }
 
 .blurb {
-  font: 100 16px/1.25 $gu-headline;
+  font: 100 17px/1.25 $gu-text-egyptian-web;
   margin: ($gu-v-spacing / 4) 0 ($gu-v-spacing / 4 * 3);
 }
 
