--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -554,6 +554,14 @@ form {
   padding: 0;
 }
 
+.form__radio-group--contribution-type {
+  @include multiline-bottom-border;
+}
+
+.form__radio-group--contribution-type:after {
+  margin: 0 -10px;
+}
+
 .form__legend--radio-group {
   display: none;
 }
@@ -574,12 +582,12 @@ form {
 
 .form__radio-group--tabs .form__radio-group-list {
   display: flex;
+  margin: 0 -10px;
 }
 
 .form__radio-group--tabs .form__radio-group-item {
   border-top: 1px solid gu-colour(neutral-4);
   flex: 1;
-  margin: 0 -10px;
 }
 
 .form__radio-group--tabs .form__radio-group-item + .form__radio-group-item {
@@ -588,17 +596,11 @@ form {
 
 .form__radio-group--tabs .form__radio-group-input + .form__radio-group-label {
   display: block;
-  padding: 4px 10px 4px;
+  padding: 4px 10px 10px;
 }
 
 .form__radio-group--tabs .form__radio-group-input:checked + .form__radio-group-label {
-  background: gu-colour(garnett-neutral-5);
-  color: gu-colour(sport-garnett-media-main-1);
-}
-
-.form__radio-group--tabs .form__radio-group-input:not(:checked) + .form__radio-group-label {
-  background: gu-colour(garnett-neutral-3);
-  color: gu-colour(garnett-neutral-2);
+  background: gu-colour(news-garnett-highlight);
 }
 
 .form__radio-group--pills .form__radio-group-list {
@@ -615,7 +617,7 @@ form {
 }
 
 .form__radio-group--pills .form__radio-group-input + .form__radio-group-label {
-  border: solid 1px gu-colour(sport-garnett-media-main-1);
+  border: solid 1px gu-colour(news-garnett-highlight);
   border-radius: 25px;
   box-sizing: border-box;
   display: flex;
@@ -626,8 +628,7 @@ form {
 }
 
 .form__radio-group--pills .form__radio-group-input:checked + .form__radio-group-label {
-  background: gu-colour(sport-garnett-media-main-1);
-  color: gu-colour(garnett-neutral-5);
+  background: gu-colour(news-garnett-highlight);
 }
 
 .form__radio-group--buttons .form__radio-group-item + .form__radio-group-item {
