Enable marketing subscription on the new thank you page (#1056)
* Marketing subscription on thank you page

* change colour on hover

* use colour alias

* change text after subscribe

* use official green colour

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -903,10 +903,24 @@ form {
 }
 
 .button--newsletter {
-  color: #29a05f;
+  color: gu-colour(garnett-neutral-5);
+  background-color: gu-colour(green-dark);
+
+  &:enabled {
+    cursor: pointer;
+
+    &:hover {
+      filter: brightness(90%);
+    }
+  }
 }
 
-.button--newsletter .svg-subscribe {
+.button--newsletter__subscribed {
+  color: gu-colour(green-dark);
+  background-color: transparent;
+}
+
+.button--newsletter .svg-subscribe, .button--newsletter .svg-subscribed {
   margin-right: 10px;
 }
 
