not you, log out text colour changed

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -770,6 +770,7 @@ form {
 .form__field--contribution-email,
 .form__field--contribution-state {
   margin-top: 24px;
+  color: gu-colour(garnett-neutral-2);
 }
 
 .form__radio-group--contribution-pay {
