--- a/assets/components/headingBlock/headingBlock.scss
+++ b/assets/components/headingBlock/headingBlock.scss
@@ -20,7 +20,7 @@
 }
 
 .component-heading-block__banner {
-  border-top: 1px solid #fff;
+  border-top: 1px solid gu-colour(news-garnett-highlight);
   padding: 8px ($gu-h-spacing / 2) $gu-v-spacing;
   font-size: 16px;
   line-height: 1;
